[package]
name = "bdo-huffman-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[workspace]
members = [
    "common",

    "baseline",
    "nested_box",
    "nested_unsafe_box",
    "flat_index",
    "flat_ptr",
    "flat_unsafe_ptr",
    "table_index",
    "table_ptr",
    "table_unsafe_ptr",
]

[workspace.dependencies]
common = { version = "*", path = "common" }
mimalloc = "0.1.43"
nohash-hasher = "0.2.0"
divan = "0.1.17"

[dev-dependencies]
divan = "0.1.17"
paste = "1.0.15"

common = { version = "*", path = "common" }
baseline = { version = "*", path = "baseline" }
nested_box = { version = "*", path = "nested_box" }
nested_unsafe_box = { version = "*", path = "nested_unsafe_box" }
flat_index = { version = "*", path = "flat_index" }
flat_ptr = { version = "*", path = "flat_ptr" }
flat_unsafe_ptr = { version = "*", path = "flat_unsafe_ptr" }
table_index = { version = "*", path = "table_index" }
table_ptr = { version = "*", path = "table_ptr" }
table_unsafe_ptr = { version = "*", path = "table_unsafe_ptr" }


[[bench]]
name = "benches"
harness = false
